running text fix

--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -94,6 +94,12 @@
                 <li>
                     <p>Credit cards</p>
                 </li>
+                <li>
+                    <p>Credit cards</p>
+                </li>
+                <li>
+                    <p>Credit cards</p>
+                </li>
        </div>
     </div>
 
