--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -81,6 +81,8 @@ ul {
     z-index: var(--z-fixed);
     transition: .4s;
     background-color: white;
+/*    background-color: transparent;
+    backdrop-filter: blur(200px);*/
     display: flex;
     align-items: center;
 }
@@ -530,7 +532,7 @@ nav {
     display: flex;
     align-items: end;
     justify-content: center;
-    background-image: url('../img/best_article_1.jpg');
+    /*background-image: url('../img/best_article_1.jpg');*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -553,7 +555,57 @@ nav {
     position: relative;
 }
 
+.credit_stat_black  {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: greenyellow;
+    flex-direction: column;
 
+}
+
+.credit_stat_black p {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    background-color: greenyellow;
+    backdrop-filter: blur(0px);
+}
+
+.black {
+    background-color: #131313;
+}
+
+.scroll_text_black p {
+    color: rgba(255, 255, 255, 0.15);
+}
+
+.credit_black p {
+    background-color: rgba(0, 0, 0, 0.15);
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.credit_stat_black p {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+}
+
+.counters {
+    background-color: red;
+
+}
 
 
 /* for medium devices */
