working working counter, but not on scroll

--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -203,11 +203,10 @@
         </ul>
     </div>
 
-    <div class="counters">
-        <div>
-            <div class="counter">
-                <h1><span data-count="156">0</span></h1>
-                <h3>projects created</h3>
+    <div class="wrapper">
+            <div class="container">
+                <h1><span class="num" data-val="400">000</span></h1>
+                <h3><span class="text">projects created</span></h3>
             </div>
         </div>
     </div>
