--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -106,7 +106,14 @@
     <div class="credit">
         <ul>
             <li class="credit_stat">
-                <p>На нашем сайте больше 100 статей про кредитные карты и кредиты</p>
+                <div class="counters">
+                    <div>
+                        <div class="counter">
+                            <h1><span data-count="156">0</span></h1>
+                            <h3>projects made</h3>
+                        </div>
+                    </div>
+                </div>
             </li>
             {% for post in articles %}
             <li class="credit_article" style="background-image: url('{{post.photo.url}}');">
@@ -148,8 +155,15 @@
 
     <div class="credit credit_black black">
         <ul>
-            <li class="credit_stat credit_stat_black">
-                <p>На нашем сайте больше 100 статей про кредитные карты и кредиты</p>
+            <li class="credit_stat">
+                <div class="counters">
+                    <div>
+                        <div class="counter">
+                            <h1><span data-count="156">0</span></h1>
+                            <h3>projects made</h3>
+                        </div>
+                    </div>
+                </div>
             </li>
             {% for post in articles %}
             <li class="credit_article" style="background-image: url('{{post.photo.url}}');">
@@ -191,7 +205,14 @@
     <div class="credit">
         <ul>
             <li class="credit_stat">
-                <p>На нашем сайте больше 100 статей про кредитные карты и кредиты</p>
+                <div class="counters">
+                    <div>
+                        <div class="counter">
+                            <h1><span data-count="156">0</span></h1>
+                            <h3>projects made</h3>
+                        </div>
+                    </div>
+                </div>
             </li>
             {% for post in articles %}
             <li class="credit_article" style="background-image: url('{{post.photo.url}}');">
@@ -203,13 +224,16 @@
         </ul>
     </div>
 
-    <div class="wrapper">
-            <div class="container">
-                <h1><span class="num" data-val="400">000</span></h1>
-                <h3><span class="text">projects created</span></h3>
-            </div>
-        </div>
-    </div>
+<!--animated counter on reload of the page-->
+<!--    <div class="wrapper">-->
+<!--            <div class="container">-->
+<!--                <h1><span class="num" data-val="400">000</span></h1>-->
+<!--                <h3><span class="text">projects created</span></h3>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+
+
 
     <div class="shit">
         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
