--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -110,7 +110,7 @@
                     <div>
                         <div class="counter">
                             <h1><span data-count="156">0</span></h1>
-                            <h3>projects made</h3>
+                            <h3>PROJECTS MADE</h3>
                         </div>
                     </div>
                 </div>
