--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -561,7 +561,6 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: greenyellow;
     flex-direction: column;
 
 }
@@ -574,7 +573,6 @@ nav {
     padding: 0;
     align-items: center;
     justify-content: center;
-    background-color: greenyellow;
     backdrop-filter: blur(0px);
 }
 
@@ -603,9 +601,8 @@ nav {
 }
 
 .counters {
-    background-color: greenyellow;
     width: 100vw;
-    height: auto;
+    height: 100%;
     margin: 0;
     padding: 0;
     display: flex;
@@ -615,16 +612,30 @@ nav {
 
 .counters div {
     height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 .counter {
-    background-color: yellow;
     height: 100%;
     margin: 0;
     padding: 0;
+}
+
+.counter h3 {
+    font-weight: 200;
+}
+
+.counter span {
+    font-weight: 800;
+    font-size: 4rem;
+    color: transparent;
+    background-clip: text;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(180deg, #3f00ff, #ff007d);
+    background-size: 100%;
 }
 
 
