--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -156,10 +156,10 @@
     <div class="credit credit_black black">
         <ul>
             <li class="credit_stat">
-                <div class="counters">
+                <div class="counters counters_2">
                     <div>
-                        <div class="counter">
-                            <h1><span data-count="156">0</span></h1>
+                        <div class="counter counter_2">
+                            <h1><span data-count="256">0</span></h1>
                             <h3>projects made</h3>
                         </div>
                     </div>
@@ -205,11 +205,11 @@
     <div class="credit">
         <ul>
             <li class="credit_stat">
-                <div class="counters">
+                <div class="counters counters_3">
                     <div>
-                        <div class="counter">
-                            <h1><span data-count="156">0</span></h1>
-                            <h3>projects made</h3>
+                        <div class="counter counter_3">
+                            <h1><span data-count="256">0</span></h1>
+                            <h3>Написано статей</h3>
                         </div>
                     </div>
                 </div>
