design changes, new logo

--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -80,7 +80,7 @@
         <div class="scroll_text">
             <ul>
                 <li>
-                    <p>Credit cards</p>
+                    <p style="color: #ff007d; opacity: 0.3;">Credit cards</p>
                 </li>
                 <li>
                     <p>Credit cards</p>
@@ -89,13 +89,13 @@
 
             <ul aria-hidden="true">
                 <li>
-                    <p>Credit cards</p>
+                    <p style="color: #ff007d; opacity: 0.3;">Credit cards</p>
                 </li>
                 <li>
                     <p>Credit cards</p>
                 </li>
                 <li>
-                    <p>Credit cards</p>
+                    <p style="color: #ff007d; opacity: 0.3;">Credit cards</p>
                 </li>
                 <li>
                     <p>Credit cards</p>
@@ -133,7 +133,7 @@
                     <p>Debit cards</p>
                 </li>
                 <li>
-                    <p>Debit cards</p>
+                    <p style="color: #ff007d; opacity: 0.3;">Debit cards</p>
                 </li>
             </ul>
 
@@ -142,13 +142,13 @@
                     <p>Debit cards</p>
                 </li>
                 <li>
-                    <p>Debit cards</p>
+                    <p style="color: #ff007d; opacity: 0.3;">Debit cards</p>
                 </li>
                 <li>
                     <p>Debit cards</p>
                 </li>
                 <li>
-                    <p>Debit cards</p>
+                    <p style="color: #ff007d; opacity: 0.3;">Debit cards</p>
                 </li>
        </div>
     </div>
@@ -179,25 +179,31 @@
         <div class="scroll_text">
             <ul>
                 <li>
-                    <p>Credit cards</p>
+                    <p style="color: #ff007d; opacity: 0.3;">Savings</p>
                 </li>
                 <li>
-                    <p>Credit cards</p>
+                    <p>Savings</p>
                 </li>
             </ul>
 
             <ul aria-hidden="true">
                 <li>
-                    <p>Credit cards</p>
+                    <p style="color: #ff007d; opacity: 0.3;">Savings</p>
                 </li>
                 <li>
-                    <p>Credit cards</p>
+                    <p>Savings</p>
                 </li>
                 <li>
-                    <p>Credit cards</p>
+                    <p style="color: #ff007d; opacity: 0.3;">Savings</p>
                 </li>
                 <li>
-                    <p>Credit cards</p>
+                    <p>Savings</p>
+                </li>
+                <li>
+                    <p style="color: #ff007d; opacity: 0.3;">Savings</p>
+                </li>
+                <li>
+                    <p>Savings</p>
                 </li>
        </div>
     </div>
