--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -27,7 +27,7 @@
 <body>
     <header class="header" id="header">
         <nav class="nav_container">
-            <a href="#" class="nav_logo">MoneyMakers</a>
+            <a href="#" class="nav_logo">Money<p>Makers</p></a>
 
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list">
