--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -101,7 +101,7 @@ nav {
 .nav_logo {
     text-decoration: none;
     color: black;
-    font-size: 1.8rem;
+    font-size: 2rem;
     padding: 0;
     margin: 0;
     padding-left: 5vw;
@@ -109,6 +109,11 @@ nav {
     display: flex;
     align-items: center;
     font-weight: 600;
+}
+
+.nav_logo p {
+    color: #ff007d;
+    font-size: 1.2rem;
 }
 
 
@@ -158,7 +163,7 @@ nav {
 
 
 .active {
-    color: black;
+    color: #ff007d;
     opacity: 1;
     transition: .3s;
 
@@ -295,7 +300,7 @@ nav {
 }
 
 .recommendations {
-    background-color: black;
+    background-color: #131313;
     margin: 0;
     padding: 0;
     margin-top: 15vh;
@@ -321,10 +326,10 @@ nav {
 .arrow {
     font-size: 1.8rem;
     cursor: pointer;
-    color: white;
+    color: #ff007d;
     padding: 0 0.7%;
     transition: .3s;
-    opacity: 0.6;
+    opacity: 1;
 }
 
 #arrow_forward {
@@ -397,7 +402,7 @@ nav {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: black;
+    background-color: #131313;
     width: 100vw;
 }
 
@@ -638,6 +643,10 @@ nav {
     background-size: 100%;
 }
 
+.credit_black h3 {
+    color: #ff007d;
+}
+
 
 /* for medium devices */
 @media screen and (min-width: 576px) {
@@ -673,11 +682,32 @@ nav {
         display: grid;
         align-content: center;
         border-radius: 1.25rem 1.25rem 0 0;
+    }
 
+     .nav_list {
+        justify-content: space-around;
+    }
+
+    .nav_link {
+        opacity: 1;
+        color: black;
+    }
+
+    .active {
+        color: #ff007d;
+        opacity: 1;
+    }
+
+    .nav_name {
+        font-weight: 250;
     }
 
      .nav_logo {
-        font-size: 1.5rem;
+        font-size: 1.7rem;
+     }
+
+    .nav_logo p {
+        font-size: 1.2rem;
      }
 
      .short_content {
@@ -746,6 +776,15 @@ nav {
     .short_content {
         display: none;
      }
+
+     .nav_logo {
+        font-size: 1.5rem;
+     }
+
+    .nav_logo p {
+        font-size: 1rem;
+     }
+
 }
 
 
@@ -769,6 +808,7 @@ nav {
         opacity: .3;
         filter: blur(.4px);
         transition: .2s;
+        color:  #131313;
     }
 
     .nav_list .nav_link:hover {
