read more button, but with bad placing

--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -123,6 +123,11 @@
             </li>
             {% endfor %}
         </ul>
+
+        <div class="button_container">
+            <a href="#" class="more_button">Читать далее &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
+
+        </div>
     </div>
 
 
