--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -126,7 +126,6 @@
 
         <div class="button_container">
             <a href="#" class="more_button">Читать далее &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
-
         </div>
     </div>
 
@@ -178,6 +177,10 @@
             </li>
             {% endfor %}
         </ul>
+
+        <div class="button_container">
+            <a href="#" class="more_button">Читать далее &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
+        </div>
     </div>
 
     <div class="container">
@@ -233,6 +236,10 @@
             </li>
             {% endfor %}
         </ul>
+
+        <div class="button_container">
+            <a href="#" class="more_button">Читать далее &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
+        </div>
     </div>
 
 <!--animated counter on reload of the page-->
