--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -76,6 +76,23 @@
         {% endblock %}
     </main>
 
+    <div class="footerContainer">
+        <div class="media">
+            <p>Follow us:</p>
+            <div class="links">
+                <span class="icon icon1"><i class="fa-brands fa-telegram"></i></span>
+                <span class="icon icon2"><i class="fa-solid fa-camera-retro"></i></span>
+                <span class="icon icon3"><i class="fa-brands fa-vk"></i></span>
+                <span class="icon icon4"><i class="fa-solid fa-envelope"></i></span>
+            </div>
+
+        </div>
+
+        <div class="foot-bottom">
+            <p>&copy; 2024 designed by Roma lbj,&nbsp; <a href="https://www.instagram.com/2benumber1">@2benumber1</a></p>
+        </div>
+    </div>
+
 </body>
 
 <script src="{% static 'main/js/script.js' %}"></script>
