--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="foot-bottom">
-            <p>&copy; 2024 designed by Roma lbj,&nbsp; <a href="https://www.instagram.com/2benumber1">@2benumber1</a></p>
+            <p>&copy; 2024 developed by Roma lbj, designed by&nbsp;<a href="https://www.instagram.com/2benumber1">@2benumber1</a></p>
         </div>
     </div>
 
