--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -34,35 +34,35 @@
                     <li class="nav_item">
                         <a href="home" class="nav_link">
                              <i class="fa-solid fa-house nav_icon"></i>
-                            <span class="nav_name">Home</span>
+                            <span class="nav_name">Главная</span>
                         </a>
                     </li>
 
                     <li class="nav_item">
                         <a href="about" class="nav_link">
                             <i class="fa-solid fa-circle-info nav_icon"></i>
-                            <span class="nav_name">About</span>
+                            <span class="nav_name">Кэшбэк</span>
                         </a>
                     </li>
 
                     <li class="nav_item">
                         <a href="Works" class="nav_link">
                             <i class="fa-solid fa-briefcase nav_icon"></i>
-                            <span class="nav_name">Works</span>
+                            <span class="nav_name">Кредитки</span>
                         </a>
                     </li>
 
                     <li class="nav_item">
                         <a href="Plans" class="nav_link">
                             <i class="fa-solid fa-clipboard-list nav_icon"></i>
-                            <span class="nav_name">Plans</span>
+                            <span class="nav_name">Копилка</span>
                         </a>
                     </li>
 
                     <li class="nav_item">
                         <a href="FAQ" class="nav_link">
                             <i class="fa-solid fa-clipboard-list nav_icon"></i>
-                            <span class="nav_name">FAQ</span>
+                            <span class="nav_name">Промо</span>
                         </a>
                     </li>
                 </ul>
