--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -162,7 +162,7 @@
     <div class="credit credit_black black">
         <ul>
             <li class="credit_stat">
-                <div class="counters counters_2">
+                <div class="counters counters_black counters_2">
                     <div>
                         <div class="counter counter_2">
                             <h1><span data-count="256">0</span></h1>
@@ -184,7 +184,7 @@
         </ul>
 
         <div class="button_container">
-            <a href="#" class="more_button">Читать далее &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
+            <a href="#" class="more_button more_button_black">Читать далее &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
         </div>
     </div>
 
