--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -109,7 +109,7 @@
                     <div>
                         <div class="counter">
                             <h1><span data-count="156">0</span></h1>
-                            <h3>PROJECTS MADE</h3>
+                            <h3>Написано статей</h3>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                     <div>
                         <div class="counter counter_2">
                             <h1><span data-count="256">0</span></h1>
-                            <h3>projects made</h3>
+                            <h3>Написано статей</h3>
                         </div>
                     </div>
                 </div>
