--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -46,7 +46,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="Works" class="nav_link">
+                        <a href="credit" class="nav_link">
                             <i class="fa-solid fa-briefcase nav_icon"></i>
                             <span class="nav_name">Кредитки</span>
                         </a>
