credit articles page

--- a/better_site/main/templates/main/credit.html
+++ b/better_site/main/templates/main/credit.html
@@ -5,28 +5,31 @@
 
 {% block content %}
 
-<div class="credit_articles_list">
+    <div class="credit_articles_list">
 
- <ul>
-     {% for post in articles %}
-        {% if post.category == "credit" %}
-                <li>
-                    <div class="post">
-                        <div class="image" style="background-image: url('{{post.photo.url}}');"></div>
-                        <div class="all_info">
-                            <p>{{post.title}}</p>
-                            <p>{{post.time_update}}</p>
-                            <p>{{post.content | truncatechars:100 }}</p>
-                        </div>
-                    </div>
-                </li>
-        {% endif %}
-     {% endfor %}
+     <ul>
+         {% for post in articles %}
+            {% if post.category == "debit" %}
+                    <li>
+                        <a href="#">
+                            <div class="post">
+                                <div class="image" style="background-image: url('{{post.photo.url}}');"></div>
+                                <div class="all_info">
+                                    <p class="title">{{post.title}}</p>
+                                    <p class="time time_create"><i class="fa-regular fa-calendar"></i>&nbsp;&nbsp;{{post.time_create}}</p>
+                                    <p class="time time_update">Обновлено&nbsp;&nbsp;{{post.time_update}}</p>
+                                    <p class="contents">{{post.content | truncatechars:200 }}</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+            {% endif %}
+         {% endfor %}
 
- </ul>
+     </ul>
 
 
-</div>
+    </div>
 
 
 {% endblock %}
