--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -760,6 +760,109 @@ nav {
 }
 
 
+.credit_articles_list {
+    margin: 15vh 0 10vh 0;
+    padding: 5vh 0 0 20vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    /*background-color: greenyellow;*/
+    border-top: 4px solid #ff007d;
+}
+
+.credit_articles_list ul {
+    margin: 0;
+    padding: 0;
+    width: 90%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background-color: red;*/
+    flex-direction: column;
+}
+
+.credit_articles_list ul li {
+    width: 100%;
+    height: 35vh;
+    margin: 0 0 2vh 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.credit_articles_list a {
+    text-decoration: none;
+    color: black;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.credit_articles_list ul li:last-child{
+    margin: 0;
+}
+
+.credit_articles_list .post {
+    width: 100%;
+    height: 100%;
+    /*background-color: yellow;*/
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.credit_articles_list .image {
+    min-width: 40%;
+    height: 35vh;
+    height: 3;
+    border-radius: 20px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.credit_articles_list .all_info {
+    /*background-color: darkred;*/
+    margin: 0 0 0 5vh;
+    height: 100%;
+    width: 55%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.credit_articles_list .title {
+    font-size: 1.5rem;
+    font-weight: 550;
+    line-height: 1.5rem;
+}
+
+.credit_articles_list .time {
+    line-height: 1.5rem;
+    margin: 0;
+}
+
+.credit_articles_list .time_create {
+    margin-top: 3vh;
+}
+
+.credit_articles_list .time_update {
+    margin-bottom: 3vh;
+}
+
+.credit_articles_list .contents {
+    font-size: 1.1rem;
+    font-weight: 300;
+    line-height: 1.5rem;
+}
+
+
 /* for medium devices */
 @media screen and (min-width: 576px) {
 
