add debit n savings pages

--- a/better_site/main/templates/main/savings.html
+++ b/better_site/main/templates/main/savings.html
@@ -9,7 +9,7 @@
 
          <ul>
              {% for post in articles %}
-                {% if post.category == "credit" %}
+                {% if post.category == "savings" %}
                         <li>
                             <a href="#">
                                 <div class="post">
