--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -39,7 +39,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="about" class="nav_link">
+                        <a href="debit" class="nav_link">
                             <i class="fa-solid fa-circle-info nav_icon"></i>
                             <span class="nav_name">Кэшбэк</span>
                         </a>
@@ -53,7 +53,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="Plans" class="nav_link">
+                        <a href="savings" class="nav_link">
                             <i class="fa-solid fa-clipboard-list nav_icon"></i>
                             <span class="nav_name">Копилка</span>
                         </a>
